# gph

./: AGENTS.md  Cargo.toml  README.md  example.gph  spec.md
src/: ast.rs  codegen.rs  gph_printer.rs  kitty.rs  layout.rs  lexer.rs  lib.rs  main.rs  mermaid_parser.rs  parser.rs  svg.rs  tui.rs
tests/: integration.rs
