[package]
name = "gph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gph"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap                = { version = "4", features = ["derive"] }
ratatui             = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm           = { version = "0.28", default-features = false, features = ["events"] }
tui-textarea        = { version = "0.7.0", features = ["crossterm"] }
mermaid-rs-renderer = { version = "0.2.2", default-features = false }
